# pi-grpo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: code-style.md  training.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ghcr-publish.yml
app/: Dockerfile  config.py  main.py  models.py
app/agents/: data_curator.py  trainer_agent.py
app/components/: kinematic_bicycle.py  physics_reward.py  pidpm_scorer.py  preference_builder.py
app/policy/: __init__.py  decode.py  driver.py  model.py  ray_driver.py  ray_reward_pool.py  ray_rollout.py  ray_staleness.py
app/prompts/: registry.py
app/reward_models/: physics_reward_model.py  preference_reward.py
app/rollouts/: local_rollout.py
app/security/: content_filter.py  input_guard.py  (+1 more)
configs/: physics_reward.yaml  safe_ranges.yaml
docker/: Dockerfile.cpu  README.md  pigrpo_llm.def
docs/: EVIDENCE.md  EXP5_LLM_SCALE.md  RAY_GRPO.md  RAY_GRPO_RESULTS.md  algorithms.md  architecture.md  index.html  training.md
evaluation/: golden_dataset.json  offline_eval.py  online_monitor.py
frontend/: app.py
observability/: cost_tracker.py  feedback.py  otel-config.yaml  tracer.py  wandb_adapter.py
paper/: Makefile  README.md  pi_grpo_neurips.tex
results/: bench_vllm.json  fsdp_scaling_4.json  fsdp_scaling_8.json  fsdp_scaling_8_hybrid_shard.json  profile_step.json  profile_step.md  triton_rmsnorm.json
scripts/: bench.py  bench_vllm.py  bench_vllm.sbatch  build_llm_container.sbatch  build_preferences.py  ci_local.sh  download_qwen.sbatch  e2e_grpo_ray.py  e2e_grpo_ray.sbatch  fsdp_train.py  fsdp_train_1node.sbatch  fsdp_train_multinode.sbatch  fsdp_train_smoke.sbatch  grpo_llm_train.py  grpo_llm_train.sbatch  grpo_plots.py  grpo_ray_slurm.sbatch  grpo_scale.py  grpo_staleness_sweep.py  grpo_staleness_sweep.sbatch  healthcheck.py  launch_train.py  nccl_diag.py  nccl_diag_2node.sbatch  nccl_diag_gdr_2node.sbatch  nccl_diag_noib_2node.sbatch  nccl_diag_pin_2node.sbatch  profile_step.py  profile_step.sbatch  seed.py  triton_kernel_demo.py  verify_reward_hacking_mechanism.py
tests/: test_api_integration.py  test_e2e_grpo_ray.py  test_grpo_advantage.py  test_grpo_plots.py  test_grpo_scale.py  test_kinematic_bicycle.py  test_kl_controller.py  test_physics_reward.py  test_pidpm.py  test_policy.py  test_ray_driver.py  test_ray_grpo_docs.py  test_ray_reward_pool.py  test_ray_rollout.py  test_ray_staleness.py  test_reward_properties.py  test_reward_sanity.py
(+50 files in other folders)
